Fixed a bug with the profile icon bug, spent about 2-3 hours on that, very tanlged code. Also finished working on the positionings of the camera font icons. Also at some point removed the unescessary margin for the scrollbars thumb - it looks much better now. Also was making a drawing today.

--- a/CSS/mainDesktop.css
+++ b/CSS/mainDesktop.css
@@ -52,6 +52,15 @@
     left: 0px;
 }
 
+.profile-picture-holder:before {
+    content: "";
+    position: absolute;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+    border-radius: 50%;
+    z-index: 16;
+}
+
 .about-me-section {
     padding: 1rem;
     overflow: auto;
